samples/_failures_safe/1761040693_06094f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd24252a.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_cd24252a.c:167:12: error: missing terminating " character
  167 |     printf("Current state
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_cd24252a.c:167:5: error: expected expression at end of input
  167 |     printf("Current state
      |     ^~~~~~
./samples/SAFE/__tmp_cd24252a.c:167:5: error: expected declaration or statement at end of input
